--- a/bibliotheque-front/src/app/navbar/navbar.component.html
+++ b/bibliotheque-front/src/app/navbar/navbar.component.html
@@ -1,1 +1,32 @@
-<p>navbar works!</p>
+<!-- Header -->
+<header class="p-3 text-bg-dark ">
+    <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <!-- Logo -->
+            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                <!-- <img id="logo" class="bi me-2" src="assets/img/logo.svg" alt="logo"> -->
+                <object id="logo" style="fill:blue" class="bi me-2" data="assets/img/logo.svg" alt="logo"></object>
+            </a>
+
+            <!-- Menu navigation -->
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
+                <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
+                <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
+                <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
+                <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+            </ul>
+
+            <!-- Barre recherche -->
+            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+                <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search">
+            </form>
+
+            <!-- Boutons Login -->
+            <div class="text-end">
+                <button type="button" class="btn btn-outline-light me-2">Login</button>
+                <button type="button" class="btn btn-warning">Sign-up</button>
+            </div>
+        </div>
+    </div>
+</header>
