--- a/bibliotheque-front/src/app/page-connexion/connexion/connexion.component.html
+++ b/bibliotheque-front/src/app/page-connexion/connexion/connexion.component.html
@@ -1,1 +1,15 @@
-<p>connexion works!</p>
+<fieldset class="container">
+    <legend>Connection</legend>
+    <div class="mb-3">
+        <label for="loginForm" class="form-label" [(ngModel)]="login">Login</label>
+        <input class="form-control" id="loginForm" placeholder="Login">
+    </div>
+    <div class="mb-3">
+        <label for="PWForm" class="form-label" [(ngModel)]="password">Password</label>
+        <input class="form-control" id="PWForm" placeholder="Password" />
+    </div>
+    <div class="col-auto">
+        <button type="submit" class="btn btn-primary mb-3" (click)="auth(login,password)">Se connecter</button>
+    </div>
+
+</fieldset>
