--- a/bibliotheque-front/src/app/page-lecteur/page-lecteur.component.html
+++ b/bibliotheque-front/src/app/page-lecteur/page-lecteur.component.html
@@ -1,1 +1,29 @@
 <p>page-lecteur works!</p>
+
+<div class="card mt-3">
+    <div class="card-header bg-primary text-white display-6">Mes emprunts</div>
+    <div class="card-body">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>ID exemplaire</th>
+                    <th>Titre</th>
+                    <th>Date d'emprunt</th>
+                    <th>Date de retour</th>
+                    <th>Rendu</th>
+                    <th></th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr *ngFor="let emp of list()">
+                    <td>{{ordi.id}}</td>
+                    <td>{{ordi.version}}</td>
+                    <td>{{ordi.marque}}</td>
+                    <td>{{ordi.ram}}</td>
+                    <td>{{ordi.ram}}</td>
+                </tr>
+            </tbody>
+
+        </table>
+</div>
