--- a/bibliotheque-front/src/app/page-connexion/inscription/inscription.component.html
+++ b/bibliotheque-front/src/app/page-connexion/inscription/inscription.component.html
@@ -11,7 +11,7 @@
                   <div class="col-md-6 mb-4">
   
                     <div class="form-outline">
-                      <input type="text" id="firstName" class="form-control form-control-lg" />
+                      <input type="text" id="firstName" class="form-control form-control-lg" name="firstName" [(ngModel)]="formCompte.prenom"/>
                       <label class="form-label" for="firstName">Prénom</label>
                     </div>
   
@@ -19,7 +19,7 @@
                   <div class="col-md-6 mb-4">
   
                     <div class="form-outline">
-                      <input type="text" id="lastName" class="form-control form-control-lg" />
+                      <input type="text" id="lastName" class="form-control form-control-lg" name="lastName" [(ngModel)]="formCompte.nom"/>
                       <label class="form-label" for="lastName">Nom</label>
                     </div>
   
@@ -30,7 +30,7 @@
                   <div class="col-md-6 mb-4 d-flex align-items-center">
   
                     <div class="form-outline datepicker w-100">
-                      <input type="date" class="form-control form-control-lg" id="birthdayDate" />
+                      <input type="date" class="form-control form-control-lg" id="birthdayDate" name="naissance" [(ngModel)]="formCompte.naissance"/>
                       <label for="birthdayDate" class="form-label">Date de Naissance</label>
                     </div>
   
@@ -41,19 +41,19 @@
   
                     <div class="form-check form-check-inline">
                       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="bibliothecaire"
-                        value="option1" checked />
+                        value="bibliothecaire"[(ngModel)]="formCompte.type"/>
                       <label class="form-check-label" for="bibliothecaire">Bibliothecaire</label>
                     </div>
   
                     <div class="form-check form-check-inline">
                       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="lecteur"
-                        value="option2" />
+                        value="inscrit" [(ngModel)]="formCompte.type"/>
                       <label class="form-check-label" for="lecteur">Lecteur</label>
                     </div>
   
                     <div class="form-check form-check-inline">
                       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="admin"
-                        value="option3" />
+                        value="admin" [(ngModel)]="formCompte.type"/>
                       <label class="form-check-label" for="admin">Admin</label>
                     </div>
   
@@ -64,7 +64,7 @@
                   <div class="col-md-6 mb-4 pb-2">
   
                     <div class="form-outline">
-                      <input type="email" id="emailAddress" class="form-control form-control-lg" />
+                      <input type="email" id="emailAddress" class="form-control form-control-lg" name="email" [(ngModel)]="formCompte.login"/>
                       <label class="form-label" for="emailAddress">Email</label>
                     </div>
   
@@ -72,7 +72,7 @@
                   <div class="col-md-6 mb-4 pb-2">
   
                     <div class="form-outline">
-                      <input type="password" id="password" class="form-control form-control-lg" />
+                      <input type="password" id="password" class="form-control form-control-lg" name="password" [(ngModel)]="formCompte.password"/>
                       <label class="form-label" for="password">Mot de Passe</label>
                     </div>
   
@@ -80,7 +80,7 @@
                 </div>
   
                 <div class="mt-4 pt-2">
-                  <input class="btn btn-primary btn-lg" type="submit" value="Submit" />
+                  <input class="btn btn-primary btn-lg" type="submit" value="Submit" (click)="create()"/>
                 </div>
   
               </form>
