Feature : connexion + Feature : déconnexion + Feature : nom de l'user sur le bouton 'mon compte'

--- a/bibliotheque-front/src/app/navbar/navbar.component.html
+++ b/bibliotheque-front/src/app/navbar/navbar.component.html
@@ -24,8 +24,13 @@
 
             <!-- Boutons Login -->
             <div class="text-end">
-                <button type="button" class="btn btn-outline-light me-2">Login</button>
-                <button type="button" class="btn btn-warning">Sign-up</button>
+                <button *ngIf="gvs.compteConnecte==null" [routerLink]="['connexion']" type="button" class="btn btn-outline-light me-2">Login</button>
+                <button *ngIf="gvs.compteConnecte==null" [routerLink]="['inscription']" type="button" class="btn btn-warning">Sign-up</button>
+                
+                <div class="btn-group" role="group" aria-label="Basic example">
+                    <button *ngIf="gvs.compteConnecte!=null" type="button" class="btn btn-warning">{{gvs.compteConnecte.nom}} {{gvs.compteConnecte.prenom}}</button>
+                    <button *ngIf="gvs.compteConnecte!=null" type="button" class="btn btn-outline-light" (click)="unAuth()">Se déconnecter</button>
+                </div>
             </div>
         </div>
     </div>
