--- a/bibliotheque-front/src/app/page-connexion/page-connexion.component.html
+++ b/bibliotheque-front/src/app/page-connexion/page-connexion.component.html
@@ -1,1 +1,6 @@
-<app-connexion></app-connexion>
+<div class="container text-center">
+    <div class="row">
+        <app-connexion class="col-6"></app-connexion>
+        <app-inscription class="col-6"></app-inscription>
+    </div>
+</div>
