--- a/bibliotheque-front/src/app/page-lecteur/page-lecteur.component.html
+++ b/bibliotheque-front/src/app/page-lecteur/page-lecteur.component.html
@@ -17,11 +17,11 @@
 
             <tbody>
                 <tr *ngFor="let emp of list()">
-                    <td>{{ordi.id}}</td>
-                    <td>{{ordi.version}}</td>
-                    <td>{{ordi.marque}}</td>
-                    <td>{{ordi.ram}}</td>
-                    <td>{{ordi.ram}}</td>
+                    <td>{{emp.idExemplaire}}</td>
+                    <td>{{emp.titreLivre}}</td>
+                    <td>{{emp.debut}}</td>
+                    <td>{{emp.fin}}</td>
+                    <td>{{emp.rendu}}</td>
                 </tr>
             </tbody>
 
