--- a/bibliotheque-front/src/app/app.component.html
+++ b/bibliotheque-front/src/app/app.component.html
@@ -1,5 +1,9 @@
-<app-navbar></app-navbar>
+<div class="d-flex flex-column min-vh-100">
+    <div><app-navbar></app-navbar></div>
+    
+    <div class="container flex-fill">
+        <router-outlet></router-outlet>
+    </div>
 
-<router-outlet></router-outlet>
-
-<app-footer></app-footer>
+    <div><app-footer></app-footer></div>
+</div>
