--- a/bibliotheque-front/src/app/home/home.component.html
+++ b/bibliotheque-front/src/app/home/home.component.html
@@ -1,1 +1,9 @@
-<div></div>
+<div class="homeBody">
+    <div class="homeSearchBar">
+        <input type="text" [(ngModel)]="searchText" size="50" placeholder="Chercher un titre"/>
+
+        <button (keyup.enter)="searchText? goToSearch() : false" (click)="searchText? goToSearch() : false">
+            <i class="bi bi-search"></i>
+        </button>
+    </div>
+</div>
