html page bibliothecaire + lecteur

--- a/bibliotheque-front/src/app/page-bibliothecaire/page-bibliothecaire.component.html
+++ b/bibliotheque-front/src/app/page-bibliothecaire/page-bibliothecaire.component.html
@@ -1,1 +1,231 @@
-<p>page-bibliothecaire works!</p>
+<div class="mt-3 mb-3">
+    <button type="button" class="btn btn-dark btn-md" type="submit" value="">Rechercher un livre</button>
+</div>
+
+<div class="container">
+    <div class="row">
+
+            <!-- Vérifier les emprunts d'un abonné -->
+
+
+    <section class="col-3">
+        <div class="container card h-100">
+             <fieldset class="card-body">
+             <h5 class="text-center">Emprunt abonné</h5>
+
+             <hr>
+    
+                <div class="row mb-3">
+                    <div>
+                        <p class="row align-items-center mb-1">ID abonné</p>
+                    </div>
+                    <div class="row align-items-center">
+                        <input id="IdAbonneForm" placeholder="" />
+                    </div>
+                </div>
+
+                <div class="row mb-3">
+                    <div>
+                        <p class="row align-items-center mb-1">ID exemplaire</p>
+                    </div>
+                    <div class="row">
+                        <input id="IdAbonneForm" placeholder="" />
+                    </div>
+                </div>
+
+                <div class="row mb-3 ">
+                    <div>
+                        <p class="row align-items-center mb-1">ID réservation</p>
+                    </div>
+                    <div class="row">
+                        <input id="IdAbonneForm" placeholder="" />
+                    </div>
+                </div>
+    
+                <div class="row mb-1">  
+                    <div class=" col-9 position-absolute bottom-0 end-0">
+                        <button type="button" class="btn btn-danger btn-md me-2 mb-3" type="submit" value="Submit">Reset</button>
+                        <button type="button" class="btn btn-success btn-md mb-3" type="submit" value="Submit">Submit</button>
+                    </div>  
+                </div>      
+  <!--position-absolute-->                        
+                
+            </fieldset>
+         </div>
+    </section>
+    
+    
+     <!-- Ajouter un emprunt -->
+    
+    
+    <section class="col-3">
+        <div class="container card h-100">
+             <fieldset class="card-body">
+             <h5 class="text-center">Ajouter emprunt</h5>
+
+            <hr>
+<!--   
+                <div class="row mb-3">
+                    <div class="col-6">ID abonné</div>
+                    <input class="col-6" id="IdAbonneForm" placeholder="" />
+                </div>
+    
+    
+                <div class="row mb-3">
+                    <div class="col-6">ID exempl.</div>
+                    <input class="col-6" id="IdExemplaireForm" placeholder="" />
+                </div>
+-->
+                <div class="row mb-3">
+                    <div>
+                        <p class="row align-items-center mb-1">ID abonné</p>
+                    </div>
+                    <div class="row align-items-center">
+                        <input id="IdAbonneForm" placeholder="" />
+                    </div>
+                </div>
+
+                <div class="row mb-3">
+                    <div>
+                        <p class="row align-items-center mb-1">ID exemplaire</p>
+                    </div>
+                    <div class="row">
+                        <input id="IdAbonneForm" placeholder="" />
+                    </div>
+                </div>
+
+
+                <div class="row mb-1">  
+                    <div class=" col-9 position-absolute bottom-0 end-0">
+                        <button type="button" class="btn btn-danger btn-md me-2 mb-3" type="submit" value="Submit">Reset</button>
+                        <button type="button" class="btn btn-success btn-md mb-3" type="submit" value="Submit">Submit</button>
+                    </div>  
+                </div> 
+                    
+            </fieldset>
+        </div>
+    </section>
+    
+    
+    <!-- Ajouter un livre -->
+    
+    
+    <section class="col-6">
+        <div class="container card h-100">
+             <fieldset class="card-body">
+             <h5 class="text-center">Ajouter un livre</h5>
+             <hr>
+    
+    
+    
+    
+    
+    
+    <!--         <div class="row col-6">
+                <div class="row mb-6">
+                    <div class="col-6">Titre du livre</div>
+                    <input class="col-6" id="IdAbonneForm" placeholder="ID abonné" />
+                </div>
+                <div class="row mb-6">
+                    <div class="col-6">Titre du livre</div>
+                    <input class="col-6" id="IdAbonneForm" placeholder="ID abonné" />
+                </div>
+            </div>
+    -->
+    
+    
+    
+    
+    <div class="row mb-3">
+        <div class="col-6">
+            <p class="row align-items-center mb-1">ID abonné</p>
+            <input class="row align-items-center" id="IdAbonneForm" placeholder="" />
+        </div>
+        <div class="col-6">
+            <p class="row align-items-center mb-1">Edition</p>
+            <input class="row align-items-center" id="EditionForm" placeholder="" />
+        </div>
+        
+    </div>
+
+    <div class="row mb-3">
+        <div class="col-6">
+            <p class="row align-items-center mb-1">Auteur</p>
+            <input class="row align-items-center" id="AuteurForm" placeholder="" />
+        </div>
+        <div class="col-6">
+            <p class="row align-items-center mb-1">ISBN</p>
+            <input class="row align-items-center" id="ISBNForm" placeholder="" />
+        </div>
+        
+    </div>
+
+    <div class="row mb-3">
+        <div class="col-6">
+            <p class="row align-items-center mb-1">Genre</p>
+            <input class="row align-items-center" id="GenreForm" placeholder="" />
+        </div>
+        <div class="col-6">
+            <p class="row align-items-center mb-1">Date de parution</p>
+            <input class="row align-items-center" id="ParutionForm" placeholder="" />
+        </div>
+
+    </div>
+
+    <div class="row mb-1">
+        <div class="col-5">
+            <p class="row align-items-center mb-1">Classification</p>
+            <input class="row align-items-center" id="ClassificationForm" placeholder="" />
+        </div>
+        <div class="col-5 position-absolute bottom-0 end-0">
+            <button type="button" class="btn btn-danger btn-md me-2 mb-3" type="submit" value="Submit">Reset</button>
+            <button type="button" class="btn btn-success btn-md mb-3" type="submit" value="Submit">Submit</button>
+
+        </div>  
+        
+    </div>
+           
+
+    <!--
+    
+                        <div class="row mb-3">
+                            <div class="col-3">Titre</div>
+                            <input class="col-3" id="TitreForm" placeholder="" />
+    
+                            <div class="col-3">Edition</div>
+                            <input class="col-3" id="EditionForm" placeholder="" />
+                        </div>
+    
+                        <div class="row mb-3">
+                            <div class="col-3">Auteur</div>
+                            <input class="col-3" id="AuteurForm" placeholder="" />
+    
+                            <div class="col-3">ISBN</div>
+                            <input class="col-3" id="ISBNForm" placeholder="" />
+                        </div>
+    
+                        <div class="row mb-3">
+                            <div class="col-3">Genre</div>
+                            <input class="col-3" id="GenreForm" placeholder="" />
+    
+                            <div class="col-3">Parution</div>
+                            <input class="col-3" id="DateParutionForm" placeholder="Date" />
+                        </div>
+    
+                        <div class="row align-items-center">
+                            <div class="col-3">Classificati.</div>
+                            <input class="col-3" id="ClassificationForm" placeholder="" />
+    
+                        </div>
+-->
+
+                        
+    
+            </fieldset>
+         </div>
+    </section>
+</div></div>
+
+<hr>
+    
+    
