--- a/bibliotheque-front/src/app/page-lecteur/page-lecteur.component.html
+++ b/bibliotheque-front/src/app/page-lecteur/page-lecteur.component.html
@@ -1,4 +1,49 @@
-<p>page-lecteur works!</p>
+<div class="mt-3 mb-3">
+    <button type="button" class="btn btn-dark btn-md" type="submit" value="">Rechercher un livre</button>
+</div>
+
+<section class="col-4">
+    <div class="container card h-100">
+        <fieldset class="card-body">
+            <h5 class="text-center">Ajouter un emprunt</h5>
+
+            <hr>
+
+                <div>
+                    <p>Utiliser la recherche de livre pour trouver l'ID de l'exemplaire</p>
+                </div>
+
+                <hr>
+
+                <div class="row mb-3">
+                    <div>
+                        <p class="row align-items-center mb-1">ID de l'exemplaire</p>
+                    </div>
+                    <div class="row align-items-center"> 
+                        <input id="IdExemplaireForm" placeholder="" />
+                    </div>
+                </div>
+
+                
+            
+
+            <div class="row ">
+            <div class="col text-end">
+                <button type="button" class="btn btn-danger btn-md " type="submit" value="Submit">Reset</button>
+            </div>  
+                
+                  
+            <div class="col text-end ">
+                <button type="button" class="btn btn-success btn-md" type="submit" value="Submit">Submit</button>
+            </div>
+        </div>
+    
+        </fieldset>
+    </div>
+</section>
+
+
+<hr>
 
 <div class="card mt-3">
     <div class="card-header bg-primary text-white display-6">Mes emprunts</div>
