--- a/bibliotheque-front/src/app/home/home.component.html
+++ b/bibliotheque-front/src/app/home/home.component.html
@@ -1,8 +1,8 @@
-<div class="homeBody">
-    <div class="homeSearchBar">
+<div class="homeBody" >
+    <div class="homeSearchBar" (keyup.enter)="searchText? goToSearch() : false">
         <input type="text" [(ngModel)]="searchText" size="50" placeholder="Chercher un titre"/>
 
-        <button (keyup.enter)="searchText? goToSearch() : false" (click)="searchText? goToSearch() : false">
+        <button (click)="searchText? goToSearch() : false">
             <i class="bi bi-search"></i>
         </button>
     </div>
