changement de CSS & routages (début)

--- a/bibliotheque-front/src/app/navbar/navbar.component.scss
+++ b/bibliotheque-front/src/app/navbar/navbar.component.scss
@@ -4,3 +4,5 @@
 	/* Couleur obtenue grâce à https://angel-rs.github.io/css-color-filter-generator/ */
 	filter: brightness(0) saturate(100%) invert(75%) sepia(1%) saturate(966%) hue-rotate(166deg) brightness(93%) contrast(92%);
 }
+
+/* Couleurs des liens */
