--- a/bibliotheque-front/src/app/navbar/navbar.component.html
+++ b/bibliotheque-front/src/app/navbar/navbar.component.html
@@ -10,11 +10,11 @@
 
             <!-- Menu navigation -->
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a [routerLink]="['']" class="nav-link px-2 text-secondary">Home</a></li>
-                <li><a [routerLink]="['']" class="nav-link px-2 text-white">Features</a></li>
-                <li><a [routerLink]="['']" class="nav-link px-2 text-white">Pricing</a></li>
-                <li><a [routerLink]="['']" class="nav-link px-2 text-white">FAQs</a></li>
-                <li><a [routerLink]="['']" class="nav-link px-2 text-white">About</a></li>
+                <li class="nav-item"><a class="nav-link px-2 text-secondary" [routerLink]="['/home']"  routerLinkActive="text-light link-light">Home</a></li>
+                <li class="nav-item"><a class="nav-link px-2 text-secondary" [routerLink]="['/livre']" routerLinkActive="text-light link-light" [queryParams]="{id:1}">Voir un livre</a></li>
+                <li class="nav-item"><a class="nav-link px-2 text-secondary" [routerLink]="['/livre']" routerLinkActive="text-light link-light" [queryParams]="{id:2}">En voir un autre</a></li>
+                <li class="nav-item"><a class="nav-link px-2 text-secondary" [routerLink]="['/tpt']"   routerLinkActive="text-light link-light">FAQs</a></li>
+                <li class="nav-item"><a class="nav-link px-2 text-secondary" [routerLink]="['/tpt']"   routerLinkActive="text-light link-light">About</a></li>
             </ul>
 
             <!-- Barre recherche -->
