--- a/bibliotheque-front/src/styles.scss
+++ b/bibliotheque-front/src/styles.scss
@@ -9,10 +9,10 @@ body {
 	font-family:"Libre Baskerville", serif !important;
 }
 
-.display-1, .display-2, .display-3, .display-4, .display-5, .display-6{
+/*.display-1, .display-2, .display-3, .display-4, .display-5, .display-6{
 	font-family:"Oswald", sans-serif;
 	font-weight:bold;
-}
+}*/
 
 .blockquote {
 	/* Citation */
