--- a/bibliotheque-front/src/app/home/home.component.html
+++ b/bibliotheque-front/src/app/home/home.component.html
@@ -1,9 +1,3 @@
 <div class="homeBody" >
-    <div class="homeSearchBar" (keyup.enter)="searchText? goToSearch() : false">
-        <input type="text" [(ngModel)]="searchText" size="50" placeholder="Chercher un titre"/>
-
-        <button (click)="searchText? goToSearch() : false">
-            <i class="bi bi-search"></i>
-        </button>
-    </div>
+    <app-search-bar></app-search-bar>
 </div>
