Auto stash before merge of "develop" and "origin/develop"
+ ajout emprunt

--- a/bibliotheque-front/src/app/page-bibliothecaire/page-bibliothecaire.component.html
+++ b/bibliotheque-front/src/app/page-bibliothecaire/page-bibliothecaire.component.html
@@ -58,7 +58,8 @@
     
     
     <section class="col-3">
-        <div class="container card h-100">
+        <app-ajout-emprunt></app-ajout-emprunt>
+ <!--       <div class="container card h-100">
              <fieldset class="card-body">
              <h5 class="text-center">Ajouter emprunt</h5>
 
@@ -92,8 +93,9 @@
                     
             </fieldset>
         </div>
+-->
     </section>
-    
+
     
     <!-- Ajouter un livre -->
     
