--- a/bibliotheque-front/src/app/bibliothecaire-emprunts/bibliothecaire-emprunts.component.html
+++ b/bibliotheque-front/src/app/bibliothecaire-emprunts/bibliothecaire-emprunts.component.html
@@ -1,4 +1,5 @@
-<p>bibliothecaire-emprunts works!</p>
+
+Recherche : <input type="text" [(ngModel)]="recherche" /><br/>
 <div class="card mt-3">
     <div class="card-header bg-primary text-white display-6">Details des emprunts</div>
     <div class="card-body">
