--- a/bibliotheque-front/src/app/navbar/navbar.component.html
+++ b/bibliotheque-front/src/app/navbar/navbar.component.html
@@ -17,10 +17,13 @@
                 <li class="nav-item"><a class="nav-link px-2 text-secondary" [routerLink]="['/tpt']"   routerLinkActive="text-light link-light">About</a></li>
             </ul>
 
-            <!-- Barre recherche -->
+            <!-- Barre recherche --> <!--
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
                 <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search">
-            </form>
+            </form>-->
+            <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+                <app-search-bar></app-search-bar>
+            </div>
 
 
             <!-- Boutons Login -->
