--- a/bibliotheque-front/src/app/navbar/navbar.component.html
+++ b/bibliotheque-front/src/app/navbar/navbar.component.html
@@ -21,7 +21,7 @@
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
                 <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search">
             </form>-->
-            <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+            <div class="col-12 col-lg-auto me-3" style="width: 25vw;" role="search">
                 <app-search-bar></app-search-bar>
             </div>
 
