--- a/bibliotheque-front/src/app/navbar/navbar.component.html
+++ b/bibliotheque-front/src/app/navbar/navbar.component.html
@@ -32,8 +32,8 @@
                 <button *ngIf="connectedAccount==null" [routerLink]="['inscription']" type="button" class="btn btn-warning">Sign-up</button>
                 
                 <div class="btn-group" role="group" aria-label="Basic example">
-                    <button *ngIf="connectedAccount!=null" [routerLink]="['/connexion']" (click)="redirectMonCompte(connectedAccount.type)" type="button" class="btn btn-warning">{{connectedAccount.nom}} {{connectedAccount.prenom}}</button>
-                    <button *ngIf="connectedAccount!=null" [routerLink]="['/connexion']" (click)="unAuth()" type="button" class="btn btn-outline-light">Se déconnecter</button>
+                    <button *ngIf="connectedAccount!=null" [routerLink]="['/connexion']" (click)="redirectMonCompte(connectedAccount.type)" type="button" class="btn btn-warning border">{{connectedAccount.nom}} {{connectedAccount.prenom}}</button>
+                    <button *ngIf="connectedAccount!=null" [routerLink]="['/connexion']" (click)="unAuth()"                                 type="button" class="btn btn-outline-light">Se déconnecter</button>
                 </div>
             </div>
         </div>
